# ts-native

./: .gitignore  AUDIT.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MODULES_PLAN.md  QWEN.md  README.md  SECURITY.md  fix_intrinsics.py  test_import.tsn  tmp_reflect_check.tsn
crates/tsn-cli/: Cargo.toml  build.rs
crates/tsn-cli/src/: args.rs  bench.rs  bench_output.rs  disasm.rs  doctor.rs  error.rs  import_collector.rs  main.rs  module_precompile.rs  pipeline.rs
crates/tsn-cli/src/pipeline/: builtins.rs  cache.rs  check.rs  colors.rs  compile.rs  execute.rs  hash.rs  lex.rs  mod.rs  parse.rs
crates/tsn-cli/src/pipeline/debug/: binds.rs  consts.rs  expr.rs  import_graph.rs  lsp.rs  mod.rs  modules.rs  scope.rs  symbols.rs  types.rs
crates/tsn-lsp/: Cargo.toml  errors.txt
crates/tsn-lsp/src/: backend.rs  constants.rs  lib.rs  main.rs
crates/tsn-lsp/src/document/: chain_queries.rs  import.rs  mod.rs  symbol_queries.rs
crates/tsn-lsp/src/features/: definition.rs  diagnostics.rs  document_highlight.rs  folding.rs  hover.rs  inlay_hints.rs  mod.rs  references.rs  rename.rs  signature_help.rs  symbols.rs  workspace_symbols.rs
crates/tsn-lsp/src/features/completion/: autoimport.rs  imports.rs  keywords.rs  members.rs  mod.rs  scope.rs
crates/tsn-lsp/src/features/hover/: format.rs  imports.rs  members.rs  mod.rs  symbols.rs
crates/tsn-lsp/src/features/semantic_tokens/: classify.rs  mod.rs
crates/tsn-lsp/src/index/: builder.rs  mod.rs  query.rs
crates/tsn-lsp/src/pipeline/: extensions.rs  format.rs  mod.rs  params.rs  symbols.rs
crates/tsn-lsp/src/query/: member.rs  mod.rs  param.rs  symbol.rs  token.rs
crates/tsn-lsp/src/util/: converters.rs  mod.rs  paths.rs  ranking.rs
crates/tsn-lsp/src/workspace/: mod.rs  revision.rs
crates/tsn-vm/: Cargo.toml
crates/tsn-vm/src/: lib.rs
crates/tsn-vm/src/intrinsic/: array.rs  async_.rs  console.rs  crypto.rs  fs.rs  http.rs  io.rs  json.rs  map.rs  math.rs  mod.rs  net.rs  path.rs  primitives.rs  reflect.rs  set.rs  sys.rs  table.rs  testing.rs  time.rs
crates/tsn-vm/src/runtime/: heap.rs  mod.rs  reactor.rs  scheduler.rs  task.rs
crates/tsn-vm/src/vm/: call.rs  frame.rs  generator.rs  math.rs  mod.rs  props.rs
crates/tsn-vm/src/vm/exec/: arith.rs  calls.rs  class.rs  collections.rs  compare.rs  exceptions.rs  mod.rs  modules.rs  props.rs  strings.rs  vars.rs
crates/tsn-vm/src/vm/props/: array.rs  bool.rs  decimal.rs  float.rs  future.rs  generator.rs  getter_setter.rs  index.rs  (+6 more)
(+572 files in other folders)
