[package]
name = "tsn-lsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tsn-lsp"
path = "src/main.rs"

[dependencies]
tsn-core    = { path = "../tsn-core" }
tsn-lexer   = { path = "../tsn-lexer" }
tsn-parser  = { path = "../tsn-parser" }
tsn-checker = { path = "../tsn-checker" }

tower-lsp  = "0.20"
tokio      = { version = "1", features = ["full"] }
serde_json = "1"
dashmap    = "5"
once_cell  = "1"
rustc-hash = { workspace = true }
