[package]
name = "tsn-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
tsn-core = { path = "../tsn-core" }
tsn-lexer = { path = "../tsn-lexer" }
tsn-parser = { path = "../tsn-parser" }
tsn-checker = { path = "../tsn-checker" }
tsn-compiler = { path = "../tsn-compiler" }
tsn-types = { path = "../tsn-types" }
tsn-op-macros = { path = "../tsn-op-macros" }
tsn-modules = { path = "../tsn-modules" }
tsn-runtime = { path = "../tsn-runtime" }
parking_lot = "0.12.5"
rust_decimal = { version = "1", features = ["serde"] }
mio = { version = "1", features = ["os-poll", "net"] }
serde_json = "1.0"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
uuid = { version = "1", features = ["v4"] }
base64 = "0.21"
hex = "0.4"
url = "2"
urlencoding = "2"
ureq = "2"
tiny_http = "0.12"
